# twitter-forward-tg-bot

./: Cargo.toml  Procfile  Readme.md
.github/workflows/: tg-bot.yml
scripts/: logger.sh
src/: logger.rs  main.rs  storage.rs  users.rs
src/creds/: credentials.rs
src/file_handling/: functions.rs
src/twitter/: manage_tweets.rs  mod.rs
