[package]
name = "twitter-forward-tg-bot"
version = "0.1.0"
authors = ["idkwhoiam322 <idkwhoiam322@raphielgang.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"
tokio = { version = "0.2.25", features = ["macros"] }
egg-mode = "0.15"
urlexpand = "0.1.3"
regex = "1.5.4"
