[package]
name = "twitter-forward-tg-bot"
version = "0.2.0"
authors = ["idkwhoiam322 <idkwhoiam322@raphielgang.org>"]
edition = "2018"
description = "A Telegram bot that forwards tweets from a list of users to a Telegram chat/channel"
repository = "https://github.com/idkwhoiam322/twitter-forward-tg-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["macros"] }
tokio = { version =  "1.9.0", features = ["rt-multi-thread", "macros"] }
egg-mode = "0.16"
urlexpand = "0.1.3"
regex = "1.5.4"
chrono = "0.4.19"
serde = "1.0.126"
serde_json = "1.0.64"
